MAINT: Add font smoothing

--- a/sass/web.site/modules/teaser/_blog-format.sass
+++ b/sass/web.site/modules/teaser/_blog-format.sass
@@ -17,6 +17,7 @@
 		padding-bottom: remify(8px)
 		+respond-min($break-tablet-min)
 			&--fullwidth
+				+font-smoothing
 				border-color: $white
 
 	&__name
