ZON-1900: remove TODO comment

--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -44,7 +44,7 @@
 	.nextread
 		margin: remify(40px) (-$page-padding) 0 (-$page-padding) // 40px topmargin until other elements are build
 		padding: 0
-		+teaser-image-text-shadow // TODO: nur --with-image
+		+teaser-image-text-shadow
 		&__link
 			margin: 0
 			padding: 0
