ZON-1966: Add AdAudience, remove Krux in ZMO

--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -84,7 +84,7 @@
         <!-- tracking at top -->
             {% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" ignore missing %}
             {% include "zeit.web.core:templates/inc/ads/%s/iqd_nuggad.html" % view.ad_delivery_type ignore missing %}
-            {% include "zeit.web.core:templates/inc/ads/%s/iqd_krux.html" % view.ad_delivery_type ignore missing %}
+            {% include "zeit.web.core:templates/inc/ads/%s/iqd_yieldlab.html" % view.ad_delivery_type ignore missing %}
             {% include "zeit.web.core:templates/inc/ads/%s/static_oop_tag.html" % view.ad_delivery_type ignore missing %}
         {% endif %}
         <div class="page-wrap">
