ZON-1814: Add border between ad and author comments

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -23,7 +23,7 @@ $color-comment-border: $zon_light_grey
 
 	&__ad
 		background: $zon_lighter_grey
-		margin: 0
+		margin: 1px 0 // 1px creates white line between ad and author comments
 		padding: 0
 
 	&__container
