--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -126,7 +126,10 @@
             {% block liveblog_status %}{% endblock %}
             {% endprofile %}
             {% block adplace_billboard %}
+                {# desktop ad place 3 #}
                 {{ lama.adplace(view.banner(3), view) }}
+                {# mobile ad place 1 #}
+                {{ lama.adplace(view.banner(1), view, mobile=True) }}
             {% endblock adplace_billboard %}
             <main class="{{ 'main' |  with_mods(view.type) }}" id="main" role="main" itemprop="mainContentOfPage">
                 {% block main %}{% endblock main %}
