--- a/src/zeit/web/site/templates/inc/navigation/login-state.html
+++ b/src/zeit/web/site/templates/inc/navigation/login-state.html
@@ -7,7 +7,7 @@
     <ul class="dropdown">
         <li class="dropdown__item">
             <a href="{{ profile }}" class="dropdown__link">Profil</a>
-            <a href="{{ logout }}" class="dropdown__link" rel="nofollow">Abmelden</a>
+            <a href="{{ logout }}" class="dropdown__link">Abmelden</a>
         </li>
     </ul>
 </div>
@@ -16,13 +16,13 @@
         <img class="login-state-mobile__avatar" alt="Avatarbild von {{ user.name }}" src="{{ user.picture }}">
     {% endif %}
     <span class="login-state-mobile__name">{{ username }}</span>
-    <a href="{{ logout }}" rel="nofollow" class="login-state-mobile__logoff">
+    <a href="{{ logout }}" class="login-state-mobile__logoff">
         Abmelden
         {{ lama.use_svg_icon('navigation-login', 'login-state-mobile__icon', request) }}
     </a>
 </div>
 {% else %}
-<a href="{{ login }}" rel="nofollow" class="user-link">
+<a href="{{ login }}" class="user-link">
     {{ lama.use_svg_icon('navigation-login', 'main_nav__community__icon', request) }}
     Anmelden
 </a>
