--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -72,7 +72,7 @@
 			font-weight: normal
 		+respond-min($break-tablet-min)
 			color: $white
-			font-size: remify(14px)
+			font-size: em(14px)
 			margin-bottom: remify(6px)
 			+font-smoothing()
 
@@ -101,7 +101,7 @@
 			color: $white
 			+font-smoothing()
 		+respond-min($break-desktop-min)
-			font-size: $font-ml
+			font-size: em(18px)
 	&__byline,
 	&__metadata
 		@extend %teaser-byline
@@ -110,7 +110,7 @@
 			margin-bottom: 0
 			+font-smoothing()
 		+respond-min($break-desktop-min)
-			font-size: $font-s--rem
+			font-size: em(14px)
 			letter-spacing: 0.04em
 	&__datetime
 		@extend %teaser-datetime
