--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -38,6 +38,7 @@
 @import "modules/teaser/teaser-small-minor"
 @import "modules/teaser/teaser-square"
 @import "modules/teaser/teaser-gallery"
+@import "modules/teaser/teaser-classic"
 
 // journalistic format marker
 @import "modules/teaser/blog-format"
