--- a/sass/web.site/modules/teaser/_blog-format.sass
+++ b/sass/web.site/modules/teaser/_blog-format.sass
@@ -2,11 +2,15 @@
 	color: $zon_dark_grey
 	font-size: remify(14px)
 	line-height: 1.2
-	+respond-min($break-tablet-min)
-		&--fullwidth
+	&--fullwidth
+		+respond-min($break-tablet-min)
 			color: $white
+			left: remify(32px)
 			position: absolute
 			top: remify(28px)
+			z-index: 1
+		+respond-min($break-desktop-min)
+			left: remify(36px)
 
 	&__marker
 		+inline-block
@@ -15,9 +19,8 @@
 		letter-spacing: 0.14em
 		margin: remify(0 2px 14px 0)
 		padding-bottom: remify(8px)
-		+respond-min($break-tablet-min)
-			&--fullwidth
-				+font-smoothing
+		&--fullwidth
+			+respond-min($break-tablet-min)
 				border-color: $white
 
 	&__name
