ZON-1956: Refactor column teaser

--- a/sass/web.site/modules/teaser/_teaser-large-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-large-column.sass
@@ -5,18 +5,18 @@
 	&__media-item
 		@extend %teaser-column__media-item !optional
 	&__series-label
-		@extend .teaser-large__series-label
+		@extend %teaser-series-label
 	&__heading
 		@extend %teaser-heading
 		margin-bottom: remify(4px)
 	&__combined-link
-		@extend .teaser-large__combined-link
+		@extend %teaser-combined-link
 	&__kicker
 		@extend .teaser-large__kicker
 	&__title
 		@extend .teaser-large__title
 	&__text
-		@extend .teaser-large__text
+		@extend %teaser-text
 	&__byline
 		@extend %teaser-column__byline
 	&__metadata
