ZON-1956: Configure classic fullwidth teaser

--- a/sass/web.site/modules/teaser/_teaser-classic.sass
+++ b/sass/web.site/modules/teaser/_teaser-classic.sass
@@ -23,6 +23,8 @@ $classic-padding: remify(20px)
 	&__kicker
 		@extend %teaser-kicker
 		margin-bottom: remify(5px)
+		&--blog
+			@extend %teaser-kicker--blog
 	&__title
 		@extend %teaser-title
 		+respond-min($break-tablet-min)
