--- a/src/zeit/web/site/templates/inc/module/servicebox.html
+++ b/src/zeit/web/site/templates/inc/module/servicebox.html
@@ -4,12 +4,15 @@
     <h3 class="servicebox__heading">Service</h3>
     <div class="servicebox__listing">
         {% for service_column in module.service_items %}
+        {% set column_loop = loop %}
         <div class="servicebox__column">
             {% for service in service_column %}
-            <a class="servicebox__link" href="{{ service.href }}">
-                {{ lama.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id), request) }}
-                <span>{{ service.title }}</span>
-            </a>
+                {% set row_loop = loop %}
+                {% set tracking_slug = 'servicebox.{}.{}..{}'.format(column_loop.index, row_loop.index, service.id) %}
+                <a class="servicebox__link" href="{{ service.href }}" data-id="{{ tracking_slug }}">
+                    {{ lama.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id), request) }}
+                    <span>{{ service.title }}</span>
+                </a>
             {% endfor %}
         </div>
         {% endfor %}
