--- a/src/zeit/web/site/templates/inc/footer.html
+++ b/src/zeit/web/site/templates/inc/footer.html
@@ -12,6 +12,7 @@
     {{ foma.footer_links(view) }}
     <div class="footer-links__seperator"></div>
     <div class="footer-links__button">
-        <a href="?" class="footer-links__linkbutton" title="Zurück nach oben">Nach oben</a>
+    	{# Das Fragezeichen soll so. Es soll ein neuer Request ausgelöst werden. #}
+        <a href="?" class="footer-links__linkbutton" title="Zurück nach oben" data-id="footernav.4.1..pfeil">Nach oben</a>
     </div>
 </div>
