ZON-1918: add mobile place 8

--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -133,6 +133,7 @@
             {% endblock adplace_billboard %}
             <main class="{{ 'main' |  with_mods(view.type) }}" id="main" role="main" itemprop="mainContentOfPage">
                 {% block main %}{% endblock main %}
+                {{ lama.adplace(view.banner(8), view, mobile=True) }}
             </main>
             {% profile %}
             <footer class="footer" role="contentinfo" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement" >
