--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -44,11 +44,12 @@
 		+respond-min($break-tablet-min)
 			bottom: 0
 			left: 0
-			padding: 0 em(10px) em(32px) em(32px)
+			padding: 0 0 em(32px) em(32px)
 			position: absolute
-			width: 66.66%
+			width: 72%
 			z-index: 2
 		+respond-min($break-desktop-min)
+			width: 66.66%
 			padding: 0 em(10px) em(36px) em(36px)
 	&__heading
 		@extend %teaser-heading
