ZON-1966: Fix template path

--- a/src/zeit/web/core/templates/inc/marketing.html
+++ b/src/zeit/web/core/templates/inc/marketing.html
@@ -3,5 +3,5 @@
 	{% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" %}
 	{% include "zeit.web.core:templates/inc/ads/%s/iqd_nuggad.html" % view.ad_delivery_type ignore missing %}
 	{% include "zeit.web.core:templates/inc/ads/%s/iqd_yieldlab.html" % view.ad_delivery_type ignore missing %}
-	{% include "zeit.web.core:templates/inc/ads/%s/static_oop_tag.html" % view.ad_delivery_type ignore missing %}
+	{% include "zeit.web.core:templates/inc/ads/%s/static_oop-tag.html" % view.ad_delivery_type ignore missing %}
 {% endif %}
