--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -36,6 +36,7 @@ $spektrum_de_blue: #4d86a4
 
 // semantic colors
 $color-body-bg: #41464d
+$color-body-text: $white
 $color-page-bg: $white
 $color-text: $zon-charcoal
 $color-text-highlighted: $zon-red
