--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -3,7 +3,7 @@
 
 body
 	background-color: $color-body-bg
-	color: $color-text
+	color: $color-body-text
 	font-family: $font-tabletgothic
 	font-size: $font-m
 	line-height: $base-line-height
