ZON-1966: Add appropriate content text color

--- a/sass/web.site/modules/_page.sass
+++ b/sass/web.site/modules/_page.sass
@@ -1,6 +1,7 @@
 .page
 	&__content
 		background: $color-page-bg // we need background here, if page is colored
+		color: $color-text
 		min-width: em(300px)
 		max-width: $break-tablet-min
 		+respond-min($break-desktop-min)
