--- a/src/zeit/web/core/templates/inc/ads/oldschool/head.html
+++ b/src/zeit/web/core/templates/inc/ads/oldschool/head.html
@@ -1,4 +1,4 @@
 {% if view.context.advertising_enabled %}
-{% include "zeit.web.core:templates/inc/ads/oldschool/iqd_head.html" ignore missing %}
-{% include "zeit.web.core:templates/inc/ads/oldschool/iqd_yield_xplosion_head.html" ignore missing %}
+{% include "zeit.web.core:templates/inc/ads/oldschool/iqd_head.html" %}
+{% include "zeit.web.core:templates/inc/ads/oldschool/iqd_yield_xplosion_head.html" %}
 {% endif %}
