--- a/src/zeit/web/core/templates/inc/marketing.html
+++ b/src/zeit/web/core/templates/inc/marketing.html
@@ -1,7 +1,5 @@
 {% if view.enable_third_party_modules and view.enable_tracking %}
 	<!-- tracking at top -->
 	{% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" %}
-	{% include "zeit.web.core:templates/inc/ads/%s/iqd_nuggad.html" % view.ad_delivery_type ignore missing %}
-	{% include "zeit.web.core:templates/inc/ads/%s/iqd_yieldlab.html" % view.ad_delivery_type ignore missing %}
-	{% include "zeit.web.core:templates/inc/ads/%s/static_oop-tag.html" % view.ad_delivery_type ignore missing %}
+	{% include "zeit.web.core:templates/inc/ads/%s/body.html" % view.ad_delivery_type ignore missing %}
 {% endif %}
