ZON-1918: Reapply lost clear statement;

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -89,6 +89,7 @@
 			position: absolute
 			top: 0
 	&--7-on-article
+		clear: right
 		float: right
 		margin: 0 remify(60px) remify(28px) remify(36px)
 		max-width: 300px
