--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -171,7 +171,7 @@ $break-3: em(1024px) !default
 $break-4: em(1120px) !default
 
 // *ad* breakpoint, px wanted
-$break-mobile-ad-width: 768px !default 
+$break-mobile-ad-width: em(768px) !default 
 
 // for comments
 $comments__break-overlap:  em(768px)
