--- a/sass/_functions.sass
+++ b/sass/_functions.sass
@@ -1,13 +1,35 @@
 /**
  * Get font-size in point size (em)
- * @function  em
- * @param     $font-size {Number} font size in pixel
- * @param     $contex    {Number} base font size in pixel
- * @return    {Number} font-size in em
+ * @function em
+ * @param    $values   {Number} list of values
+ * @param    $contex   {Number} base font size in pixel
+ * @return   {Number}  font-size in em
  */
 
-@function em($font-size, $context: $base-font-size)
-	@return $font-size / $context + 0em
+@function em($values, $context: $base-font-size)
+
+	$list: ()
+
+	// there can be CSS attributes with more than one value
+	@each $value in $values
+
+		$unit: unit($value)
+
+		@if ($unit == 'em' or $unit == '') // em or unitless values, like in 'margin: 0 16em'
+			$list: append($list, $value)
+
+		@else if ($unit == unit($context)) // conversion to em
+			$list: append($list, $value / $context + 0em)
+
+		@else
+			$base: unit($context)
+			@warn "Incompatible units: '#{$unit}' and '#{$base}'"
+
+	// mimic legacy behaviour
+	@if length($list) == 1
+		@return nth($list, 1)
+
+	@return $list
 
 @function rem($px)
 	@return $px/16px * 1rem
@@ -73,7 +95,7 @@ $rem-to-px-base: 16 !default
 	@if not( global-variable-exists(rem-to-px-conversion) )
 		@error 'Please provide variable named $rem-to-px-conversion'
 	@if not( global-variable-exists(rem-to-px-base) )
-		@error 'Please provide variable named $$rem-to-px-base'
+		@error 'Please provide variable named $rem-to-px-base'
 
 	$list: ()
 
