--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -1,9 +1,20 @@
 $fix-mqs: false !default;
 $fix-mqs-h: false !default;
 
+// sanity-checks
+@if $fix-mqs and unit($fix-mqs) != "em" {
+	@error "Please provide variable $fix-mqs using 'em' unit";
+}
+
+@if $fix-mqs-h and unit($fix-mqs-h) != "em" {
+	@error "Please provide variable $fix-mqs using 'em' unit";
+}
+
 @mixin respond-min($width) {
 	@if $fix-mqs {
-		@if $fix-mqs >= $width {
+		// most MQs are in <em>, but some MQs might use <px>
+		// convert to <em> to avoid conparison of incompatible units
+		@if $fix-mqs >= em($width) {
 			@content;
 		}
 	}
@@ -16,7 +27,7 @@ $fix-mqs-h: false !default;
 
 @mixin respond-min-h($height) {
 	@if $fix-mqs-h {
-		@if $fix-mqs-h >= $height {
+		@if $fix-mqs-h >= em($height) {
 			@content;
 		}
 	}
@@ -29,7 +40,7 @@ $fix-mqs-h: false !default;
 
 @mixin respond-minw-minh($width, $height) {
 	@if $fix-mqs {
-		@if $fix-mqs >= $width {
+		@if $fix-mqs >= em($width) {
 			@content;
 		}
 	}
@@ -42,7 +53,7 @@ $fix-mqs-h: false !default;
 
 @mixin respond-max($width) {
 	@if $fix-mqs {
-		@if $fix-mqs < $width {
+		@if $fix-mqs < em($width) {
 			@content;
 		}
 	}
@@ -56,7 +67,7 @@ $fix-mqs-h: false !default;
 
 @mixin respond-min-max($min-width, $max-width) {
 	@if $fix-mqs {
-		@if $fix-mqs >= $min-width or $fix-mqs < $max-width {
+		@if $fix-mqs >= em($min-width) or $fix-mqs < em($max-width) {
 			@content;
 		}
 	} @else {
