Hide empty byline

--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -109,6 +109,8 @@
 	line-height: 1.3846
 	letter-spacing: $zon-letter-spacing-s
 	margin-bottom: remify(4px)
+	&:empty
+		display: none
 
 %teaser-metadata
 	color: $zon_grey
