--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -1,5 +1,5 @@
 .nextread
-	margin: 0 (-$page-padding)
+	margin: em(40px) (-$page-padding) 0 // margin-top until preceding elements are build
 	&__link
 		display: block
 	&__lead
