--- a/src/zeit/web/site/templates/inc/footer.html
+++ b/src/zeit/web/site/templates/inc/footer.html
@@ -4,6 +4,9 @@
             {{ footer.footer_logo(view.request) }}
         </div>
     </div>
+    <div class="breadcrumbs">
+        {%- include "zeit.web.site:templates/inc/navigation/breadcrumbs.tpl" ignore missing -%}
+    </div>
     <div class="footer-publisher">
         {{ footer.footer_publisher(view) }}
     </div>
