--- a/sass/web.magazin/screen.sass
+++ b/sass/web.magazin/screen.sass
@@ -21,6 +21,7 @@
 @import "layout/containers"
 
 @import "modules/breakpoints-to-js"
+@import "modules/fonts"
 @import "modules/tabs"
 @import "modules/nav"
 @import "modules/article"
