--- a/sass/web.site/modules/_fonts.sass
+++ b/sass/web.site/modules/_fonts.sass
@@ -1,2 +1,2 @@
-@import "../../web.core/font-faces/tablet_base"
-@import "../../web.core/font-faces/franziska_base"
+@import "web.core/font-faces/tablet_base"
+@import "web.core/font-faces/franziska_base"
