MAINT: Hide VG Wort pixel

--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -212,7 +212,7 @@
         {{lama_core.wrapper_handling( view )}}
         {% if view.vgwort_url %}
         <!--start: vgwort-->
-            <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel">
+        <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel" class="visually-hidden">
         <!--end: vgwort-->
         {% endif %}
     </body>
