--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -160,7 +160,7 @@
 
     {% if view.vgwort_url %}
     <!--start: vgwort-->
-    <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel">
+    <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel" class="visually-hidden">
     <!--end: vgwort-->
     {% endif %}
 </body>
