--- a/src/zeit/web/core/templates/inc/tracking/ivw_ver1.html
+++ b/src/zeit/web/core/templates/inc/tracking/ivw_ver1.html
@@ -7,5 +7,5 @@
     document.write("<img src=\""+IVW+"?r="+escape(document.referrer)+"&d="+(Math.random()*100000)+"\" class=\"visuallyhidden\" alt=\"\" width=\"1\" height=\"1\" />");
 </script>
 <noscript>
-    <img alt="" class="visuallyhidden" src="http://zeitonl.ivwbox.de/cgi-bin/ivw/CP/{{ view.banner_channel }};" height="1" width="1" />
+    <img alt="" class="visually-hidden" src="http://zeitonl.ivwbox.de/cgi-bin/ivw/CP/{{ view.banner_channel }};" height="1" width="1" />
 </noscript>
