--- a/src/zeit/web/core/templates/inc/tracking/zeit.html
+++ b/src/zeit/web/core/templates/inc/tracking/zeit.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-    document.write('<img alt="" class="visuallyhidden" src="http://cc.zeit.de/cc.gif?banner-channel={{channel}}&r='+escape(document.referrer)+'&rand='+Math.random()*10000000000000000+'">');
+    document.write('<img alt="" class="visually-hidden" src="http://cc.zeit.de/cc.gif?banner-channel={{channel}}&r='+escape(document.referrer)+'&rand='+Math.random()*10000000000000000+'">');
 </script>
