MAINT: Remove obsolete classes

--- a/sass/web.magazin/modules/_comments.sass
+++ b/sass/web.magazin/modules/_comments.sass
@@ -1,5 +1,6 @@
 .article__socialbox
     padding-bottom: $compact
+    text-align: center
     +respond-min($comments__break-overlap)
         position: absolute
         top: 0
