--- a/src/zeit/web/magazin/templates/inc/article/comments.html
+++ b/src/zeit/web/magazin/templates/inc/article/comments.html
@@ -1,5 +1,5 @@
 {% if view.linkreach or view.comments_allowed or view.comments %}
-	<div class="article__socialbox tc" id="js-social-services">
+	<div class="article__socialbox" id="js-social-services">
 	{% if view.linkreach %}
 		<div class="article__sharing">
 		{% if view.linkreach.total >= 10 %}
