--- a/sass/web.site/modules/teaser/_teaser-square.sass
+++ b/sass/web.site/modules/teaser/_teaser-square.sass
@@ -1,5 +1,4 @@
-// nth() needed because remify() gives back a list
-$additional-margin: nth($page-padding, 1) * 2
+$additional-margin: $page-padding * 2
 $layout: ".teaser-square"
 
 .teaser-square
