ZON-1030: Add vertical space

--- a/sass/web.site/modules/teaser/_teaser-buzz.sass
+++ b/sass/web.site/modules/teaser/_teaser-buzz.sass
@@ -1,5 +1,5 @@
 .buzz-accordion
-	margin-bottom: $vertical-space
+	margin: $vertical-space 0
 
 .buzz-box
 	// overflow: hidden // needed for animation using max-height
