ZON-1976: SASS typo

--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -5,7 +5,7 @@
 %teaser
 	+pie-clearfix
 	border-top: 1px solid $zon_light_grey
-	margin: 0 -($page-padding)
+	margin: 0 (-$page-padding)
 	padding: $vertical-space $page-padding
 	&:nth-of-type(1)
 		border-top: none
