--- a/sass/web.site/modules/teaser/_teaser-square.sass
+++ b/sass/web.site/modules/teaser/_teaser-square.sass
@@ -4,14 +4,19 @@ $layout: ".teaser-square"
 .teaser-square
 	background-color: $zon_mid_grey
 	color: $white
-	margin: 0 -($page-padding) $vertical-space
+	margin: $vertical-space (-$page-padding)
 	padding-bottom: 100%
 	// calc() needed to compensate the negative margin
 	padding-bottom: calc(100% + #{$additional-margin})
 	position: relative
 	+respond-min($break-areas)
-		margin: 0 0 $vertical-space 0
+		margin-left: 0
+		margin-right: 0
 		padding-bottom: 100%
+
+	// remove possible border on any successive teaser
+	& + article
+		border-top: none
 
 	&__media
 		margin: 0
