ZON-1976: Adjust teaser image focus outline

--- a/sass/web.site/modules/_scaled-image.sass
+++ b/sass/web.site/modules/_scaled-image.sass
@@ -2,4 +2,5 @@
     // min-height: 1px // see http://davidwalsh.name/empty-width
     img
         width: 100%
-
+    a
+        display: block // adjust focus outline to match image dimensions
