--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -4,54 +4,50 @@
 	background-color: $zon_lighter_grey
 	+respond-min($break-tablet-min)
 		display: table-cell
-		padding: $page-padding $page-padding 0 $page-padding
-		width: remify(207px)
+		padding: $page-padding
+		width: 27%
+		max-width: remify(200px) // looks like nonsense, but works to suppress overflowing table-cell
 	+respond-min($break-desktop-min)
-		width: remify(240px)
+		width: 25%
 
 	&__logo
 		&--spektrum
 			+background-size(contain)
 			display: inline-block
-			height: remify(30px)
+			height: remify(26px)
 			text-indent: -50000em
-			vertical-align: middle
 			width: remify(125px)
 
 	&__title
 		+link
 			color: inherit
 			text-decoration: none
-		color: $zon-charcoal
 		display: block
-		font-size: remify(22px)
+		font-size: remify(21px)
 		font-weight: bold
 		letter-spacing: $zon-letter-spacing-s
-		line-height: 1.0
-		padding: remify($small--px) $page-padding remify($little--px) $page-padding
+		line-height: 1
+		padding: remify(14px) $page-padding
 		position: relative
 		width: auto
 		@at-root a#{&}
 			+on-interaction
 				text-decoration: underline
 		+respond-min($break-tablet-min)
-			background: none
-			font-size: remify(21px)
-			line-height: 1
 			margin: 0
 			padding: 0
 		+respond-min($break-desktop-min)
 			font-size: remify(24px)
 		&:after
-			content: '\203A' // › = Single right-pointing angle quotation mark
-			position: absolute
-			right: remify($petite--px)
+			color: $zon_grey
+			content: "\203A" // › = single right-pointing angle quotation mark
+			float: right
 			font-size: remify(32px)
-			top: remify(12px)
-			color: $grey
+			line-height: remify(12px)
 			+respond-min($break-tablet-min)
 				content: none
 		&--spektrum
+			+font-smoothing
 			+link
 				color: $white
 			+on-interaction
@@ -60,27 +56,22 @@
 			background: $spektrum_de_blue
 			color: $white
 			display: block
-			height: remify(60px)
 			left: 0
-			line-height: remify(60px)
-			padding: 0 0 0 $page-padding
+			padding: remify(17px) $page-padding
 			position: absolute
 			top: 0
 			width: 100%
-			+font-smoothing()
 			&:after
-				top: remify(-2px)
 				color: $white
 
 	&__topic-links
 		display: none
+		margin: 1em 0
 		+respond-min($break-tablet-min)
 			display: block
 			list-style: none
 			padding: 0
-			width: remify(167px)
-		+respond-min($break-desktop-min)
-			width: remify(200px)
+			width: 100%
 
 		&--spektrum
 			margin-top: 0
@@ -89,7 +80,8 @@
 	&__more-link
 		display: none
 		+respond-min($break-tablet-min)
-			+link-colors($zon_grey)
+			+link
+				color: $zon_grey
 			display: block
 			font-size: remify(14px)
 			letter-spacing: $zon-letter-spacing-s
@@ -97,17 +89,13 @@
 			overflow: hidden
 
 	&__more-link
-		display: none
-		+respond-min($break-tablet-min)
-			display: block
-			font-weight: bold
-			line-height: 1.334
-			&:after
-				content: ' \25B8 ' // ▸ = Black Right-Pointing Small Triangle
+		font-weight: bold
+		&:after
+			content: "\25B8" // ▸ = Black Right-Pointing Small Triangle
 		&--spektrum
-			+link-colors($spektrum_de_blue, $black, $spektrum_de_blue, $spektrum_de_blue)
+			+link
+				color: $spektrum_de_blue
 			font-weight: normal
-			padding-top: remify(5px)
 
 	&__more
 		&--spektrum
