--- a/sass/web.site/modules/teaser/_teaser-small-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column.sass
@@ -31,7 +31,7 @@
 
 +respond-min($break-desktop-min)
 	.teaser-small-column
-		margin: $vertical-space 0 $vertical-space 0
+		margin: $vertical-space 0
 		&--has-media
 			min-height: remify(250px)
 			padding: $petite $petite $petite remify(250px+20px)
