ZON-1913: Umziehen tile_12 von "vor dem Video" nach "nach der ersten Duo-Region"

--- a/src/zeit/web/site/templates/inc/region/default.html
+++ b/src/zeit/web/site/templates/inc/region/default.html
@@ -1,6 +1,6 @@
 <div class="{{ 'cp-region' | with_mods(region.kind) }}">
     {% block before_area_list %}{% endblock %}
-    {% for area in region.values() | map('get_area') %}
+    {% for area in region_values | map('get_area') %}
         {% include "zeit.web.site:templates/inc/area/includer.html" %}
     {% endfor %}
     {% block after_area_list %}{% endblock %}
