--- a/sass/web.site/modules/_header.sass
+++ b/sass/web.site/modules/_header.sass
@@ -29,8 +29,8 @@
     border-radius: $tiny
     border: 1px solid $zon_light_grey
     display: inline-block
-    margin: 0 9px 5px 0
-    padding: 4px 7px 1px
+    margin: remify(0 9px 5px 0)
+    padding: remify(2px 7px 3px)
     &:hover
         background-color: $zon_lighter_grey
 
